--- a/Jungle-Academy/portfolio4-admin_design/index.html
+++ b/Jungle-Academy/portfolio4-admin_design/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="css/index.css" media="screen and (max-width : 2560px)">
   <link rel="stylesheet" href="css/index-reactive.css">
   <script src="js/jquery-3.4.1.min.js"></script>
+  <script src="js/iscroll.js"></script>
   <title>index/admin/portfolio</title>
   <!-- http://webarch.revox.io/3.0/html/index.html# -->
   <!-- 5/20 1h, 5/21 20:30~1:00 4.5h, 5/22 22:00~2:00 4h, 5/25 13:00~16:00 3h 20:00~22:30 2.5h,
@@ -16,7 +17,7 @@
   5/31 15:10~17:00 6/4 13:30~18:00 6/5 16:00~ -->
   <!-- 브라우저 크기 1600px -->
 </head>
-<body>
+<body class="index">
   <header>
     <nav id="main-tnb">
       <ul class="tnb-wrap">
@@ -404,8 +405,9 @@
           </div>
         </div>
         <!-- 얘를 밑에 깔고싶음 -->
-        <!-- <p><img src="img/9.jpg" alt=""></p> -->
         <ul class="joing-board">
+          <!-- before로 넣기 -->
+          <!-- <p><img src="img/9.jpg" alt=""></p> -->
           <li>
             <div>
               <img src="img/joing-img/list1-1.png" alt="21 jan, new year UI Bundle now on webarch">
