smart slide event 추가

--- a/Jungle-Academy/portfolio1-smart/index.html
+++ b/Jungle-Academy/portfolio1-smart/index.html
@@ -47,7 +47,7 @@
     <div class="text-banner-pink"></div>
   </section> 
 
-  <a class="skip" href="main.html"></a>
+  <a class="skip" href="page/main.html"></a>
 
 
   <script>
