--- a/Jungle-Academy/portfolio5-full_page_design/index.html
+++ b/Jungle-Academy/portfolio5-full_page_design/index.html
@@ -12,128 +12,130 @@
   <title>portfolio/mirye an</title>
 </head>
 <body>
-  <main id="main-wrap">
-    <ul id="page-indicator">
-        <!--
-        <li><a href="#">1 페이지</a></li>
-        <li><a href="#">2 페이지</a></li>
-        <li><a href="#">3 페이지</a></li>
-        <li><a href="#">4 페이지</a></li>
-        <li><a href="#">5 페이지</a></li>
-        <li><a href="#">6 페이지</a></li>
-        <li><a href="#">7 페이지</a></li>
--->
-    </ul>
+  <div id="wrapper">
+    <main id="main-wrap">
+      <ul id="page-indicator">
+          <!--
+          <li><a href="#">1 페이지</a></li>
+          <li><a href="#">2 페이지</a></li>
+          <li><a href="#">3 페이지</a></li>
+          <li><a href="#">4 페이지</a></li>
+          <li><a href="#">5 페이지</a></li>
+          <li><a href="#">6 페이지</a></li>
+          <li><a href="#">7 페이지</a></li>
+  -->
+      </ul>
 
-    <section class="page intro" id="page1">
-      <div class="content-wrap">
-        <div class="img-wrap">
-          <img src="img/profile.jpg" alt="프로필사진">
+      <section class="page intro" id="page1">
+        <div class="content-wrap">
+          <div class="img-wrap">
+            <img src="img/profile.jpg" alt="프로필사진">
+          </div>
+          <div>
+            <h3>안 미 례</h3>
+            <p>
+              나에 대한 소개를 작성할 영역입니다.<br>
+              퍼블리셔 안미례입니다.<br>
+              포트폴리오 버튼을 누르면 포트폴리오 url로 자동연결됩니다.<br>
+              아래로 내리면 제가 만든 포트폴리오와 함께 설명이 보입니다.<br>
+            </p>
+            <ul>
+              <li>포트폴리오 설명 바로가기</li>
+              <li><a href="#portfolio1">WARE-VALLEY</a></li>
+              <li><a href="#portfolio2">MEMO-SCRIPT</a></li>
+              <li><a href="#portfolio3">SMART-UNIFORM</a></li>
+              <li><a href="#portfolio4">ADMIN-DESIGN</a></li>
+              <li><a href="#portfolio5">PORTFOLIO FULL PAGE</a></li>
+            </ul>
+          </div>
         </div>
-        <div>
-          <h3>안 미 례</h3>
-          <p>
-            나에 대한 소개를 작성할 영역입니다.<br>
-            퍼블리셔 안미례입니다.<br>
-            포트폴리오 버튼을 누르면 포트폴리오 url로 자동연결됩니다.<br>
-            아래로 내리면 제가 만든 포트폴리오와 함께 설명이 보입니다.<br>
-          </p>
-          <ul>
-            <li>포트폴리오 설명 바로가기</li>
-            <li><a href="#portfolio1">WARE-VALLEY</a></li>
-            <li><a href="#portfolio2">MEMO-SCRIPT</a></li>
-            <li><a href="#portfolio3">SMART-UNIFORM</a></li>
-            <li><a href="#portfolio4">ADMIN-DESIGN</a></li>
-            <li><a href="#portfolio5">PORTFOLIO FULL PAGE</a></li>
-          </ul>
-        </div>
-      </div>
-    </section>
+      </section>
 
-    <section class="page" id="page2">
-      <ul class="content-wrap">
-        <!-- li1 -->
-        <li>
-          <img src="img/device/device.png" alt="device">
-          <div class="desk">
-            <table>
-              <colgroup>
-                <col style="width: 150px">
-              </colgroup>
-              <caption>WARE VALLEY<span>Copy and Part renewal</span></caption>
-              <!-- thead 생략함 -->
-              <tbody>
-                <tr>
-                  <th>Viewport</th>
-                  <td>PC / Tablet / Mobile</td>
-                </tr>
-                <tr>
-                  <th>IE Surpport</th>
-                  <td>IE10+ / Chrome</td>
-                </tr>
-                <tr>
-                  <th>참여도</th>
-                  <td>퍼블리싱 100%</td>
-                </tr>
-                <tr>
-                  <th>구성(링크)</th>
-                  <td>main-page
-                    <a href="#">login page</a>
-                    <a href="#">sign-up page</a>
-                  </td>
-                </tr>
-              </tbody>
-            </table>
+      <section class="page" id="page2">
+        <ul class="content-wrap">
+          <!-- li1 -->
+          <li>
+            <img src="img/device/device.png" alt="device">
+            <div class="desk">
+              <table>
+                <colgroup>
+                  <col style="width: 150px">
+                </colgroup>
+                <caption>WARE VALLEY<span>Copy and Part renewal</span></caption>
+                <!-- thead 생략함 -->
+                <tbody>
+                  <tr>
+                    <th>Viewport</th>
+                    <td>PC / Tablet / Mobile</td>
+                  </tr>
+                  <tr>
+                    <th>IE Surpport</th>
+                    <td>IE10+ / Chrome</td>
+                  </tr>
+                  <tr>
+                    <th>참여도</th>
+                    <td>퍼블리싱 100%</td>
+                  </tr>
+                  <tr>
+                    <th>구성(링크)</th>
+                    <td>main-page
+                      <a href="#">login page</a>
+                      <a href="#">sign-up page</a>
+                    </td>
+                  </tr>
+                </tbody>
+              </table>
 
-            <!-- class명 어떻게 해야할지 모르겠음 -->
-            <ul class="sub-title">
-              <li>메인 헤더 구조 및 효과 변경</li>
-              <li>jQuery 사용자 정의 함수로 만든 basic 슬라이드 및 Swipe</li>
-              <li>CSS3와 jQuery 사용자 정의 함수를 이용한 인터렉티브 모션</li>
-              <li>카운팅 애니메이션</li>
+              <!-- class명 어떻게 해야할지 모르겠음 -->
+              <ul class="sub-title">
+                <li>메인 헤더 구조 및 효과 변경</li>
+                <li>jQuery 사용자 정의 함수로 만든 basic 슬라이드 및 Swipe</li>
+                <li>CSS3와 jQuery 사용자 정의 함수를 이용한 인터렉티브 모션</li>
+                <li>카운팅 애니메이션</li>
+              </ul>
+
+              <div class="btn-main-page">
+                <a href="#">Go to Website</a>
+                <a href="#">Go to Github</a>
+              </div>
+            </div>
+          </li>
+
+          <!-- li2 -->
+          <li>
+            <ul class="explain-wrap">
+              <li>
+                <img src="img/device/device.png" alt="device">
+              </li>
+              <li class="sub-explain">
+                <ul class="part-explain">
+                  <li>메인 헤더 구조 및 효과 변경</li>
+                </ul>
+              </li>
+              <li>
+                <img src="img/device/device.png" alt="device">
+              </li>
             </ul>
 
-            <div class="btn-main-page">
+            <div class="btn-sub-page">
               <a href="#">Go to Website</a>
               <a href="#">Go to Github</a>
             </div>
-          </div>
-        </li>
+          </li>
+        </ul>
 
-        <!-- li2 -->
-        <li>
-          <ul class="explain-wrap">
-            <li>
-              <img src="img/device/device.png" alt="device">
-            </li>
-            <li class="sub-explain">
-              <ul class="part-explain">
-                <li>메인 헤더 구조 및 효과 변경</li>
-              </ul>
-            </li>
-            <li>
-              <img src="img/device/device.png" alt="device">
-            </li>
-          </ul>
+        <p class="control">
+          <a href="#" class="prev"><img alt="이전 이미지" src="img/image-slide/btn_left.png" /></a>
+          <a href="#" class="next"><img alt="다음 이미지" src="img/image-slide/btn_right.png" /></a>
+        </p>
 
-          <div class="btn-sub-page">
-            <a href="#">Go to Website</a>
-            <a href="#">Go to Github</a>
-          </div>
-        </li>
-      </ul>
-
-      <p class="control">
-        <a href="#" class="prev"><img alt="이전 이미지" src="img/image-slide/btn_left.png" /></a>
-        <a href="#" class="next"><img alt="다음 이미지" src="img/image-slide/btn_right.png" /></a>
-      </p>
-
-      <!-- 인디케이터 생기게 -->
-      <span class="indicator">
-        <!-- 1/5 -->
-      </span>
-    </section>
-  </main>
+        <!-- 인디케이터 생기게 -->
+        <span class="indicator">
+          <!-- 1/5 -->
+        </span>
+      </section>
+    </main>
+  </div>
 
 <script>
 'use strict';
@@ -142,7 +144,7 @@ setFullPageMouseEffect('.page');
 
 function setFullPageMouseEffect(selector) {
   var eventScroll = '';
-  var numPage = $(selector).length;
+  var numPage = $(selector).length - 1;
   var pagePrev = 0;
   var pageNow = 0;
   var pageNext = 0;
@@ -187,6 +189,10 @@ function setFullPageMouseEffect(selector) {
   showPage(0);
 
   function showPage(n) {
+    $('#main-wrap').css({'top': -(n * 100) + '%'});
+    $('#page-indicator li a').removeClass('on');
+    $('#page-indicator li a').eq(n).addClass('on');
+
     pageNow = n;
     pagePrev = (n - 1) < 0 ? 0 : (n - 1);
     pageNext = (n + 1) > numPage ? numPage : (n + 1);
