--- a/home/1_LLOYD/index.html
+++ b/home/1_LLOYD/index.html
@@ -12,12 +12,12 @@
   <header>
     <nav class="eland">
       <ul class="eland-site">
-        <li><img src="img/icons/header_lloyd.png" alt="이랜드몰 로고"><img src="img/icons/bg_wm_btns_cr.gif" alt="세로 선"></li>
-        <li><img src="img/icons/header_lloyd.png" alt="모던하우스 로고"><img src="img/icons/bg_wm_btns_cr.gif" alt="세로 선"></li>
+        <li><img src="img/icons/header_lloyd.png" alt="이랜드몰 로고"><img src="img/icons/bg_wm_btns_cr.gif" aria-hidden="true" alt="세로 선"></li>
+        <li><img src="img/icons/header_lloyd.png" alt="모던하우스 로고"><img src="img/icons/bg_wm_btns_cr.gif" aria-hidden="true" alt="세로 선"></li>
         <li><img src="img/icons/header_lloyd.png" alt="킴스클럽 로고"></li>
         <li>
           <select name="site" id="site">
-            <option value="site">BRAND SITE<img src="img/icons/bg_wm_btns_cr.gif" alt="세로 선"><img src="img/icons/bu_brand_arrow.png" alt="위아래 화살표"></option>
+            <option value="site">BRAND SITE<img src="img/icons/bg_wm_btns_cr.gif" aria-hidden="true" alt="세로 선"><img src="img/icons/bu_brand_arrow.png" alt="위아래 화살표"></option>
           </select>
           <ul>
             <li>
@@ -89,10 +89,10 @@
       </ul>
       <ul class="eland-member">
         <li>
-          <img src="img/icons/bg_wm_btns_cr.gif" alt="세로 선"><span>로그인</span>
+          <img src="img/icons/bg_wm_btns_cr.gif" aria-hidden="true" alt="세로 선"><a href=""><span>로그인</span></a>
           <section class="login">
             <h2><span>로그인</span><a href=""><img src="img/icons/btn_laypop_close.gif" alt="닫기 버튼"></a></h2>
-            <article class="member">
+            <section class="member">
               <h3>통합회원</h3>
               <p>
                 통합회원은 한 아이디로 이랜드몰닷컴의 모든 서비스를 이용할 수 있습니다.
@@ -115,8 +115,8 @@
                 <span><img src="img/" alt="카카오톡"></span>
                 <span><img src="img/" alt="페이스북"></span>
               </div>
-            </article>
-            <article class="non-member">
+            </section>
+            <section class="non-member">
               <h3>비회원 (주문조회)</h3>
               <p>
                 <em>비회원 구매 시 입력했던 정보로 로그인 해 주세요.</em>
@@ -133,13 +133,13 @@
                 <span><em>이랜드몰 회원이 아니세요?</em>회원으로 가입하시고 푸짐한 혜택을 누리세요</span>
                 <button>회원가입</button>
               </p>
-            </article>
+            </section>
           </section>
         </li>
-        <li><img src="img/icons/bg_wm_btns_cr.gif" alt="세로 선">회원가입</li>
-        <li><img src="img/icons/bg_wm_btns_cr.gif" alt="세로 선"><span>장바구니</span><em><span class="text-ir">장바구니에 담긴 상품 개수</span></em></li>
-        <li><img src="img/icons/bg_wm_btns_cr.gif" alt="세로 선">마이페이지</li>
-        <li><img src="img/icons/bg_wm_btns_cr.gif" alt="세로 선">고객센터</li>
+        <li><img src="img/icons/bg_wm_btns_cr.gif" aria-hidden="true" alt="세로 선"><a href="">회원가입</a></li>
+        <li><img src="img/icons/bg_wm_btns_cr.gif" aria-hidden="true" alt="세로 선"><a href=""><span>장바구니</span><em><span class="text-ir">장바구니에 담긴 상품 개수</span></em></a></li>
+        <li><img src="img/icons/bg_wm_btns_cr.gif" aria-hidden="true" alt="세로 선"><a href="">마이페이지</a></li>
+        <li><img src="img/icons/bg_wm_btns_cr.gif" aria-hidden="true" alt="세로 선"><a href="">고객센터</a></li>
       </ul>
     </nav>
   </header>
