--- a/home/1_LLOYD/index.html
+++ b/home/1_LLOYD/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,6 +9,7 @@
   <title>LLOYD :: The Gift | ELAND MALL</title>
   <!-- 2/10 2h, 2/11  -->
 </head>
+
 <body>
   <header>
     <div class="eland-wrap">
@@ -94,14 +96,130 @@
             <img src="img/icons/bg_wm_btns_cr.gif" aria-hidden="true" alt="세로 선"><a href="#"><span>로그인</a>
           </li>
           <li><img src="img/icons/bg_wm_btns_cr.gif" aria-hidden="true" alt="세로 선"><a href="#">회원가입</a></li>
-          <li><img src="img/icons/bg_wm_btns_cr.gif" aria-hidden="true" alt="세로 선"><a href="#"><span>장바구니</span><em><span class="text-ir">장바구니에 담긴 상품 개수</span></em></a></li>
+          <li><img src="img/icons/bg_wm_btns_cr.gif" aria-hidden="true" alt="세로 선"><a
+              href="#"><span>장바구니</span><em><span class="text-ir">장바구니에 담긴 상품 개수</span></em></a></li>
           <li><img src="img/icons/bg_wm_btns_cr.gif" aria-hidden="true" alt="세로 선"><a href="#">마이페이지</a></li>
           <li><img src="img/icons/bg_wm_btns_cr.gif" aria-hidden="true" alt="세로 선"><a href="#">고객센터</a></li>
         </ul>
       </nav>
     </div>
+    <nav class="snb">
+      <div class="sns">
+        <a href="#">
+          <span class="text-ir">페이스북 바로가기</span>
+        </a>
+        <a href="#">
+          <span class="text-ir">네이버 블로그 바로가기</span>
+        </a>
+        <a href="#">
+          <span class="text-ir">인스타그램 바로가기</span>
+        </a>
+      </div>
+      <h3>
+        <img src="img/brand-logo/logo_lloyd.jpg" alt="로이드 로고">
+      </h3>
+      <div class="search">
+        <label for="serach-box">
+          <input type="text" id="serach-box">
+        </label>
+        <button>
+          <span class="text-ir">검색버튼</span>
+        </button>
+      </div>
+    </nav>
+
+    <nav class="gnb">
+      <ul>
+        <li class="catefory">
+          <a href="#">()CATEGORY ()</a>
+          <ul>
+            <li>
+              <a href="#">JEWELRY</a>
+              <ul>
+                <li><a href="#">Necklace</a></li>
+                <li><a href="#">Earring</a></li>
+                <li><a href="#">Bracelet</a></li>
+                <li><a href="#">RING</a></li>
+                <li><a href="#">COUPLE RING</a></li>
+                <li><a href="#">BABY & KIDS</a></li>
+              </ul>
+            </li>
+          </ul>
+          <ul>
+            <li><a href="#">WATCH</a>
+              <ul>
+                <li><a href="#">METAL</a></li>
+                <li><a href="#">LEATHER</a></li>
+                <li><a href="#">COUPLE</a></li>
+                <li><a href="#">MEN</a></li>
+                <li><a href="#">COLLECTION</a></li>
+              </ul>
+            </li>
+          </ul>
+          <ul>
+            <li><a href="#">BIRTH JEWELRY</a>
+              <ul>
+                <li><a href="#">탄생석</a></li>
+                <li><a href="#">탄생화</a></li>
+                <li><a href="#">탄생달</a></li>
+                <li><a href="#">별자리</a></li>
+                <li><a href="#">탄생잎</a></li>
+              </ul>
+            </li>
+          </ul>
+          <ul>
+            <li><a href="#">SPECIAL</a>
+              <ul>
+                <li><a href="#">THE BASIC</a></li>
+                <li><a href="#">FOR LADY</a></li>
+                <li><a href="#">HERITAGE</a></li>
+                <li><a href="#">BOLD JEWERLY</a></li>
+                <li><a href="#">디즈니xLLOYD</a></li>
+                <li><a href="#">BABY & KIDS</a></li>
+                <li><a href="#">SIGNATURE</a></li>
+              </ul>
+            </li>
+          </ul>
+        </li>
+
+        <li><a href="#">JEWELRY</a>
+          <ul>
+            <li><a href="#">Necklace</a></li>
+            <li><a href="#">Earring</a></li>
+            <li><a href="#">Bracelet</a></li>
+            <li><a href="#">RING</a></li>
+            <li><a href="#">COUPLE RING</a></li>
+            <li><a href="#">BABY & KIDS</a></li>
+          </ul>
+        </li>
+        <li><a href="#">WATCH</a>
+          <ul>
+            <li><a href="#">METAL</a></li>
+            <li><a href="#">LEATHER</a></li>
+            <li><a href="#">COUPLE</a></li>
+            <li><a href="#">MEN</a></li>
+            <li><a href="#">COLLECTION</a></li>
+          </ul>
+        </li>
+        <li><a href="#">BIRTH JEWELRY</a>
+          <ul>
+            <li><a href="#">탄생석</a></li>
+            <li><a href="#">탄생화</a></li>
+            <li><a href="#">탄생달</a></li>
+            <li><a href="#">별자리</a></li>
+            <li><a href="#">탄생잎</a></li>
+          </ul>
+        </li>
+        <li><a href="#">NEW</a></li>
+        <li><a href="#">BEST</a></li>
+        <li><a href="#">기획전</a></li>
+        <li><a href="#">EVENT</a></li>
+        <li><a href="#">스토어 안내</a></li>
+      </ul>
+    </nav>
+
   </header>
-  
+
 
   <!-- <footer>
     로그인창
@@ -152,4 +270,5 @@
     </section>
   </footer> -->
 </body>
+
 </html>
