visual section after start indicator

--- a/home/2_GUCCI/index.html
+++ b/home/2_GUCCI/index.html
@@ -4,37 +4,48 @@
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous"/>
+  <link rel="stylesheet" href="assets/css/index.css"/>
   <meta name="title" content="구찌 공식 온라인 스토어"/>
   <meta name="description" content="새롭게 공개된 구찌 2019 가을/겨울 컬렉션을 구찌 공식 온라인 스토어에서 가장 먼저 만나 보세요."/>
   <title>구찌 공식 온라인 스토어</title>
   <!-- 9/10 3h -->
 </head>
-<body>
+<body id="idnex" class="index">
   <div class="visual">
-    <div class="slide">
-      <h2>2019 가을 / 겨울 패션쇼</h2>
-      <div class="view-btn">
-        <button>여성 컬렉션 만나보기</button>
-        <button>남성 컬렉션 만나보기</button>
+    <div class="slide s1">
+      <div class="contents">
+        <h2><span class="PoiretOne">2019</span> 가을/겨울 패션쇼</h2>
+        <div class="view-btn">
+          <button>여성 컬렉션 만나보기</button>
+          <button>남성 컬렉션 만나보기</button>
+        </div>
       </div>
     </div>
-    <div class="slide">
-      <h2>울트라페이스 스니커즈</h2>
-      <div class="view-btn">
-          <button>여성 컬렉션</button>
-          <button>남성 컬렉션</button>
+    <div class="slide s2">
+      <div class="contents">
+        <h3><span class="PoiretOne">2019</span> 가을/겨울 컬렉션</h3>
+        <h2>스니커즈</h2>
+        <div class="view-btn">
+            <button>여성 컬렉션 만나보기</button>
+        </div>
       </div>
     </div>
-    <div class="slide">
-      <h2>GG 마몽</h2>
-      <div class="view-btn">
-        <button>컬렉션 만나보기</button>
+    <div class="slide s3">
+      <div class="contents">
+        <h3><span class="PoiretOne">2019</span> 가을/겨울 컬렉션</h3>
+        <h2>스니커즈</h2>
+        <div class="view-btn">
+          <button>남성 컬렉션 만나보기</button>
+        </div>
       </div>
+    </div>
+    <div class="slide s4">
     </div>
 
     <ul id="indicator">
-      <li><span class="text-ir">n번 슬라이드</span></li>
+      <li><span class="text-ir">n번 슬라이드</span>*</li>
+      <li><span class="text-ir">n번 슬라이드</span>*</li>
     </ul>
 
     <div class="silde-btns">
@@ -195,10 +206,10 @@
                   <a href="#">2020 크루즈 컬렉션</a>
                 </li>
                 <li>
-                  <a href="#">2019 가을/겨울 패션쇼</a>
+                  <a href="#"><span class="PoiretOne">2019</span> 가을/겨울 패션쇼</a>
                 </li>
                 <li>
-                  <a href="#">2019 봄/여름 패션쇼</a>
+                  <a href="#"><span class="PoiretOne">2019</span> 봄/여름 패션쇼</a>
                 </li>
                 <li>
                   <div class="slide">
