--- a/home/2_GUCCI/index.html
+++ b/home/2_GUCCI/index.html
@@ -49,10 +49,9 @@
     </ul>
 
     <div class="silde-btns">
-      <a class="prev-btn" href="#"><img src="../img/btn_main_arrow_left.png" alt="이전 슬라이드 버튼"></a>
-      <a class="next-btn" href="#"><img src="../img/btn_main_arrow_right.png" alt="다음 슬라이드 버튼"></a>
+      <a class="prev-btn" href="#"><img src="assets/img/icons/bt_left01_off.png" alt="이전 슬라이드 버튼"></a>
+      <a class="next-btn" href="#"><img src="assets/img/icons/bt_right01_off.png" alt="다음 슬라이드 버튼"></a>
     </div>
-
     <a href="#">구찌 선물포장 서비스 <i class="fas fa-chevron-right"><span class="i-text-ir">오른쪽 화살표</span></i></a>
   </div>
 
