--- a/home/2_GUCCI/index.html
+++ b/home/2_GUCCI/index.html
@@ -54,7 +54,7 @@
       <a class="prev-btn" href="#"><img src="assets/img/icons/bt_left01_off.png" alt="이전 슬라이드 버튼"></a>
       <a class="next-btn" href="#"><img src="assets/img/icons/bt_right01_off.png" alt="다음 슬라이드 버튼"></a>
     </div>
-    <a href="#">구찌 선물포장 서비스 <i class="fas fa-chevron-right"><span class="i-text-ir">오른쪽 화살표</span></i></a>
+    <a href="#" class="present-svc">구찌 선물포장 서비스 <i class="fas fa-chevron-right"><span class="i-text-ir">오른쪽 화살표</span></i></a>
   </div>
 
   <header>
@@ -943,7 +943,7 @@
     slideNow = n;
     slideNext = n + 1 > numSlide ? 1 : n + 1;
     slidePrev = n - 1 < 1 ? numSlide : n - 1;
-    timerId = setTimeout(() => {showSlide(slideNext)}, timerSpeed);
+    // timerId = setTimeout(() => {showSlide(slideNext)}, timerSpeed);
   }
 </script>
 </body>
