--- a/home/2_GUCCI/index.html
+++ b/home/2_GUCCI/index.html
@@ -175,7 +175,7 @@
       <ul>
         <li>
           <a href="#">WHAT'S NEW</a>
-          <ul class="on">
+          <ul>
             <li>
               <a href="#">NEW</a>
               <ul>
@@ -217,19 +217,19 @@
                   <div class="slide-wrap">
                     <a href="#">
                       <img src="assets/img/NavSlide/NavHorizontalStandard_S01-FS-SHOWSPACE_001_Default.jpg" alt="글자끌어올수있나">
-                      <em>
+                      <em class="slide-inside-text">
                         <span class="perhaps">2020</span> 글자 끌어오기
                       </em>
                     </a>
                     <a href="#">
                       <img src="assets/img/NavSlide/NavHorizontalStandard_S01CRUISE-showspace_001_Default.jpg" alt="글자끌어올수있나">
-                      <em>
+                      <em class="slide-inside-text">
                         <span class="perhaps">2020</span> 글자 끌어오기
                       </em>
                     </a>
                     <a href="#">
                       <img src="assets/img/NavSlide/NavHorizontalStandard_S93-FS-SHOWSPACE_001_Default.jpg" alt="글자끌어올수있나">
-                      <em>
+                      <em class="slide-inside-text">
                         <span class="perhaps">2020</span> 글자 끌어오기
                       </em>
                     </a>
@@ -676,7 +676,7 @@
         </li>
         <li>
           <a href="#">주얼리 & 시계</a>
-          <ul class="">
+          <ul class="wide-list no-border-all-list">
             <li>
               <a href="#">골드 주얼리</a>
               <ul>
@@ -750,6 +750,9 @@
               <a href="#">시계</a>
               <ul>
                 <li>
+                  <a href="#">구찌 그립</a>
+                </li>
+                <li>
                   <a href="#">여성</a>
                 </li>
                 <li>
@@ -757,22 +760,14 @@
                 </li>
               </ul>
             </li>
-            <li>
-              <a href="#">SPECIAL COLLECTIONS</a>
-              <ul>
-                <li>
-                  <a href="#">구찌 그립</a>
-                </li>
-              </ul>
-            </li>
           </ul>
         </li>
         <li>
           <a href="#">구찌 데코</a>
-          <ul>
-            <li>
+          <ul class="col-list">
+            <li class="col4">
               <a href="#">구찌 데코</a>
-              <ul>
+              <ul class="col4">
                 <li>
                   <a href="#">캔들</a>
                 </li>
@@ -806,23 +801,25 @@
                 <li>
                   <a href="#">병풍</a>
                 </li>
-              </ul>
-            </li>
-            <li>
-              <a href="#">자세히 보기</a>
-              <ul>
                 <li>
-                  <a href="#">
-                    <h3>공간의 미학</h3>
-                  </a>
+                  <a href="#">벽지</a>
                 </li>
               </ul>
+            </li>
+            <li class="details">
+              <a href="#">자세히 보기</a>
+              <div>
+                <a href="#">
+                  <img src="assets/img/NavImage/NavHorizontalStandard_S93-DECOR-newnew_001_Default.jpg" alt="공간의 미학"/>
+                  <em class="slide-inside-text">공간의 미학</em>
+                </a>
+              </div>
             </li>
           </ul>
         </li>
         <li>
           <a href="#">선물제안</a>
-          <ul>
+          <ul class="wide-list">
             <li>
               <a href="#">선물제안</a>
               <ul>
@@ -838,19 +835,21 @@
                 <li>
                   <a href="#">구찌 DIY</a>
                 </li>
-                <li>
-                  <a href="#">
-                    <img src="" alt="구찌 선물 포장"/>
-                  </a>
-                </li>
               </ul>
+            </li>
+            <li class="details">
+              <div>
+                <a href="#">
+                  <img src="assets/img/NavImage/NavHorizontalStandard_ivory-wrap-new_001_Default.jpg" alt="구찌 선물 포장"/>
+                </a>
+              </div>
             </li>
           </ul>
         </li>
         <li>
           <a href="#">구찌 스토리</a>
-          <ul>
-            <li>
+          <ul class="col-list gucci-story">
+            <li class="col2">
               <a href="#">구찌 스토리</a>
               <ul>
                 <li>
@@ -885,51 +884,55 @@
                 </li>
               </ul>
             </li>
-            <li>
+            <li class="col2 no-border recently-info">
               <a href="#">최신 정보</a>
               <ul>
                 <li>
                   <a href="#">
-                    <img src="" alt="앨범커버"/>
-                    <em>캠페인</em>
-                    <span>핸드세이크</span>
+                    <img src="assets/img/NavRecentlyInfo/NavArticle_S01-FS-LINEUP_001_Default.jpg" alt="런웨이 2020 봄/여름 컬렉션"/>
+                    <div>
+                      <em>런웨이</em>
+                      <span>2020 봄/여름 컬렉션</span>
+                    </div>
                   </a>
                 </li>
                 <li>
                   <a href="#">
-                    <img src="" alt="앨범커버"/>
-                    <em>캠페인</em>
-                    <span>프레타포르테(특수문자같은 영문)</span>
+                    <img src="assets/img/NavRecentlyInfo/NavArticle_FW-ADV_001_Default.jpg" alt="캠페인 프레타포르테"/>
+                    <div>    
+                      <em>캠페인</em>
+                      <span>프레타포르테(특수문자같은 영문)</span>
+                    </div>
                   </a>
                 </li>
                 <li>
                   <a href="#">
-                    <img src="" alt="앨범커버"/>
-                    <em>샐러브리티</em>
-                    <span>
-                      더 퍼포머스:갈리
-                      <span>(Ghali)</span>
-                    </span>
+                    <img src="assets/img/NavRecentlyInfo/NavArticle_S93-GucciGrip_001_Default.jpg" alt="캠페인 핸드셰이크"/>
+                    <div>    
+                      <em>캠페인</em>
+                      <span>핸드셰이크</span>
+                    </div>
                   </a>
                 </li>
                 <li>
                   <a href="#">
-                    <img src="" alt="앨범커버"/>
-                    <em>향수</em>
-                    <span>유니버셜 향수의 노트</span>
+                    <img src="assets/img/NavRecentlyInfo/NavArticle_Memoire-Fragrance_001_Default.jpg" alt="향수 유니버셜 향수의 노트"/>
+                    <div>    
+                      <em>향수</em>
+                      <span>유니버셜 향수의 노트</span>
+                    </div>
                   </a>
                 </li>
               </ul>
             </li>
-            <li>
+            <li class="details">
               <a href="#">동영상</a>
-              <ul>
-                <li>
-                  <a href="#">
-                    <h3>Cruise <span class="perhaps">2020</span></h3>
-                  </a>
-                </li>
-              </ul>
+              <div>
+                <a href="#">
+                  <img src="assets/img/NavImage/NavHorizontalStandard_S01-FS-SHOWSPACE_001_Default.jpg" alt="구찌 선물 포장"/>
+                  <em class="slide-inside-text"><span class="perhaps">2020</span> 봄/여름 컬렉션</em>
+                </a>
+              </div>
             </li>
           </ul>
         </li>
@@ -980,7 +983,7 @@
     slideNow = n;
     slideNext = n + 1 > numSlide ? 1 : n + 1;
     slidePrev = n - 1 < 1 ? numSlide : n - 1;
-    // timerId = setTimeout(() => {showSlide(slideNext)}, timerSpeed);
+    timerId = setTimeout(() => {showSlide(slideNext)}, timerSpeed);
   }
 
   //nav fashion-show slide
@@ -1028,6 +1031,18 @@
       'left' : -( index * slideWidth ) + 'px',
     });
   });
+
+  //nav
+  $('.gnb > ul > li').on('mouseenter',function(){
+    $('.gnb > ul > li > ul').removeClass('on');
+    $(this).find('ul').addClass('on');
+  });
+
+  $('#index-header').on('mouseleave', function(){
+    $('.gnb > ul > li > ul').removeClass('on');
+  });
+
+
 
 
 
